Gradle improvements